# qvcs-gui

./: CMakeLists.txt  Jenkinsfile  main.cpp  resource.qrc
forms/: lite_progress_dialog.cpp  lite_progress_dialog.h  main_window.cpp  main_window.h  main_window.ui  new_repo_dialog.cpp  new_repo_dialog.h  new_repo_dialog.ui  repo_form.ui  repo_new_dialog.cpp  repo_new_dialog.h  repo_new_dialog.ui  repos_form.cpp  repos_form.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  utils.cpp  utils.h  versions_form.cpp  versions_form.h  versions_form.ui  versions_new_dialog.cpp  versions_new_dialog.h  versions_new_dialog.ui
net/: api.cpp  api.h  http.cpp  http.h  uploader.cpp  uploader.h
